--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,20 @@
 			<artifactId>webdrivermanager</artifactId>
 			<version>4.3.1</version>
 		</dependency>
-
-
-
+	 <dependency>
+	  <groupId>com.aventstack</groupId>
+	  <artifactId>extentreports</artifactId>
+	  <version>4.1.7</version>
+	  <scope>test</scope>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>com.relevantcodes</groupId>
+	  <artifactId>extentreports</artifactId>
+	  <version>2.41.2</version>
+	  <scope>test</scope>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
